# pdf-ocr-table-image

./: instructions.txt  pyproject.toml
pdfocrlearning/: __main__.py  extract_image.py  extract_table.py  extract_text.py
